# geohospital_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: trino_minio_notes.md
geohospital_pipeline_clean/: README.md
src/geohospital_pipeline/: bronze.py  cli.py  config.py  logging_config.py  osm.py  quality.py  silver.py
src/osm_hospitals_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bronze.py  test_integration.py  test_quality.py  test_silver.py
tests/fixtures/: sample_overpass_response.json
