[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-hospitals-pipeline"
version = "0.1.0"
description = "Python data pipeline extracting hospital locations from OpenStreetMap into Bronze and Silver lakehouse zones."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "geopandas>=0.14.0",
    "pyarrow>=15.0.0",
    "shapely>=2.0.0",
    "typer>=0.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
geohospital_pipeline = "geohospital_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]